[gd_scene load_steps=15 format=3 uid="uid://cl1iqoctluyqc"]

[ext_resource type="Script" path="res://World/Objects/Magic/Fire/FireProjectile.gd" id="1_molg8"]
[ext_resource type="Script" path="res://World3D/Objects/Projectiles/Hitbox.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://bt8wejlwv77xj" path="res://Assets/Images/Misc/light.png" id="13"]

[sub_resource type="SpriteFrames" id="22"]
animations = []

[sub_resource type="SpriteFrames" id="18"]
animations = []

[sub_resource type="RectangleShape2D" id="19"]
size = Vector2(3, 3)

[sub_resource type="CapsuleShape2D" id="20"]
resource_local_to_scene = true
radius = 9.53675e-06
height = 1.90735e-05

[sub_resource type="Curve" id="23"]
min_value = -400.0
max_value = 400.0
_data = [Vector2(0.00225479, 400), 0.0, 6785.07, 0, 0, Vector2(0.0963725, 84.2162), -1232.57, -1232.57, 0, 0, Vector2(1, -200), 1228.09, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="24"]
max_value = 2.5
_data = [Vector2(0, 2.49732), 0.0, 0.0, 0, 0, Vector2(1, 1.22348), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="29"]
offsets = PackedFloat32Array(0.000555864, 0.171765, 0.454118, 0.762353, 1)
colors = PackedColorArray(1, 0.992157, 0.713726, 1, 1, 0.737227, 0, 1, 0.851586, 0.504755, 0.0706631, 1, 0.994795, 0.323645, 0.204007, 1, 1, 0, 0, 1)

[sub_resource type="Curve" id="27"]
max_value = 3.0
_data = [Vector2(0, 2.75318), 0.0, 0.0, 0, 0, Vector2(1, 1.35797), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="28"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 551.546, 0, 0, Vector2(0.110634, -116.595), 0.0, 0.0, 0, 0, Vector2(1, -138.216), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="31"]
min_value = 0.99
max_value = 5.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 5), 10.0041, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="30"]
offsets = PackedFloat32Array(0, 0.994737, 1)
colors = PackedColorArray(0.51083, 0.51083, 0.51083, 1, 0.611765, 0.611765, 0.611765, 0.227451, 1, 1, 1, 0)

[node name="FireProjectile" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_molg8")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1.18, 1.18, 1.18, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("22")
animation = &"explode"

[node name="Projectile" type="AnimatedSprite2D" parent="."]
modulate = Color(1.2, 1.2, 1.2, 1)
position = Vector2(0, -10)
scale = Vector2(2, 2)
sprite_frames = SubResource("18")
animation = &"play"
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("19")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-17, 0)
collision_layer = 0
collision_mask = 262146
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(17, 0)
rotation = 1.5708
shape = SubResource("20")

[node name="Timer" type="Timer" parent="."]

[node name="TrailParticles" type="Node2D" parent="."]

[node name="Particles3" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
position = Vector2(-23, 0)
emitting = false
amount = 15
lifetime = 2.0
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 15.0
gravity = Vector2(0, 0)
color = Color(1, 0.792157, 0.203922, 1)

[node name="Particles2" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
position = Vector2(-23, 0)
emitting = false
amount = 15
lifetime = 2.0
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 15.0
gravity = Vector2(0, 0)
color = Color(0.996078, 0.380392, 0.203922, 1)

[node name="Particles1" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
position = Vector2(-23, 0)
emitting = false
amount = 15
lifetime = 2.0
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 15.0
gravity = Vector2(0, 0)
color = Color(0.996078, 0.0784314, 0.00784314, 1)

[node name="ExplosionParticles" type="Node2D" parent="."]
modulate = Color(1.2, 1.2, 1.2, 1)

[node name="Explosion" type="CPUParticles2D" parent="ExplosionParticles"]
emitting = false
amount = 200
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector2(0, 0)
linear_accel_curve = SubResource("23")
scale_amount_curve = SubResource("24")
color_ramp = SubResource("29")

[node name="Shards" type="CPUParticles2D" parent="ExplosionParticles/Explosion"]
emitting = false
amount = 20
lifetime = 0.9
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 140)
scale_amount_curve = SubResource("27")
color_ramp = SubResource("29")

[node name="Smoke" type="CPUParticles2D" parent="ExplosionParticles/Explosion"]
self_modulate = Color(1, 1, 1, 0.823529)
show_behind_parent = true
emitting = false
amount = 250
lifetime = 0.9
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
linear_accel_curve = SubResource("28")
scale_amount_curve = SubResource("31")
color_ramp = SubResource("30")

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 1.01
texture = ExtResource("13")
texture_scale = 0.75

[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
